Newly created everything

--- a/backend/templates/credentials.html
+++ b/backend/templates/credentials.html
@@ -1,15 +1,19 @@
-<html>
-<head><link rel="stylesheet" href="/static/style.css"></head>
-<body>
-<h2>Cloud Credentials</h2>
+<html><head><link rel="stylesheet" href="/static/style.css">
+<script>function t(id){document.getElementById(id).style.display=document.getElementById(id+'-c').checked?'block':'none'}</script></head>
+<body><div class="container"><div class="card">
+<h2>Connect Clouds</h2>
 <form method="post">
-<input name="aws_access_key" placeholder="AWS Access Key"/><br/>
-<input name="aws_secret_key" placeholder="AWS Secret Key"/><br/>
-<input name="tenant_id" placeholder="Azure Tenant ID"/><br/>
-<input name="client_id" placeholder="Azure Client ID"/><br/>
-<input name="client_secret" placeholder="Azure Client Secret"/><br/>
-<input name="subscription_id" placeholder="Subscription ID"/><br/>
-<button>Save</button>
-</form>
-</body>
-</html>
+<label><input type="checkbox" id="aws-c" name="use_aws" onchange="t('aws')"> AWS</label>
+<div id="aws" style="display:none">
+<input name="aws_access_key" placeholder="AWS Access Key">
+<input name="aws_secret_key" placeholder="AWS Secret Key">
+</div>
+<label><input type="checkbox" id="azure-c" name="use_azure" onchange="t('azure')"> Azure</label>
+<div id="azure" style="display:none">
+<input name="tenant_id" placeholder="Tenant ID">
+<input name="client_id" placeholder="Client ID">
+<input name="client_secret" placeholder="Client Secret">
+<input name="subscription_id" placeholder="Subscription ID">
+</div>
+<button>Continue</button>
+</form></div></div></body></html>
