--- a/backend/templates/login.html
+++ b/backend/templates/login.html
@@ -1,11 +1,8 @@
-<html>
-<head><link rel="stylesheet" href="/static/style.css"></head>
-<body>
-<h2>Login</h2>
+<html><head><link rel="stylesheet" href="/static/style.css"></head>
+<body><div class="container"><div class="card">
+<h1>Cloud Billing Aggregator</h1>
 <form method="post" action="/login">
-<input name="username" placeholder="Username"/><br/>
-<input name="password" type="password" placeholder="Password"/><br/>
+<input name="username" placeholder="Username">
+<input type="password" name="password" placeholder="Password">
 <button>Login</button>
-</form>
-</body>
-</html>
+</form></div></div></body></html>
